fix: resolve Java 17 + Spark 3.3.0 compatibility issues